@@ -1,4 +1,7 @@
 
+2009-04-01 15:54 Ali aliov@xfce.org 
+	 * : Inhibit plugin: Monitor org.freedesktop.PowerManagement name
+
 2009-04-01  9:33 Ali aliov@xfce.org 
 	 * : Added man pages for the power manager and its settings
 
